--- a/InfoJobs/InfoJobs.UI.Web/Views/Home/Index.cshtml
+++ b/InfoJobs/InfoJobs.UI.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem-vindo</h1>
-    <p>Teste desenvolvido como desafio para seletivo de desenvolvedor da InfoJobs.</p>
+    <p>Teste desenvolvido como desafio para seletivo de desenvolvedor na InfoJobs.</p>
     <ul>
         Tecnologias
         <li>
@@ -31,7 +31,8 @@
         </li>        
     </ul>
     <hr />
-    <ul>Clean architecture
+    <ul>
+        Clean architecture
         <li>
             CQRS
         </li>
